<resources>
    <string name="app_name">JCart</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Orders</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">My Cart</string>
    <string name="menu_send">Sell Products</string>
</resources>
