<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/_profile"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/_order"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/_cart"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/_sell"
            android:title="@string/menu_send" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/_logout"
        android:title="Logout" />

</menu>
