<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.e.jcart.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.e.jcart.ui.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.e.jcart.ui.OrdersFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.e.jcart.ui.MycartFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_mycart" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.e.jcart.ui.SellFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_sell" />
</navigation>